# mlops-team10-project

./: .gitattributes  .gitignore  DRIFT_ANALYSIS_SUMMARY.md  FINAL_REPORT.md  MODEL_COMPARISON.md  README.md  pyproject.toml
api/: client_example.py  main.py  models.py
data/processed/: automl_leaderboard.csv  automl_results.json  test.csv  train.csv  validate.csv
drift_reports/: drift_summary.json  evidently_drift_summary.json
infrastructure/: mlflow_setup.md
mlruns/0/: meta.yaml
mlruns/883317573335820192/: meta.yaml
mlruns/883317573335820192/7d6f0718fb404ca0a2a30e2be138aa78/: meta.yaml
mlruns/883317573335820192/7d6f0718fb404ca0a2a30e2be138aa78/metrics/: test_mae  test_r2  test_rmse  train_mae  train_r2  train_rmse  val_mae  val_r2  val_rmse
mlruns/883317573335820192/7d6f0718fb404ca0a2a30e2be138aa78/tags/: algorithm  mlflow.source.name
mlruns/883317573335820192/8fe5bf4edbb24e3f83149d03d7dd5fb7/: meta.yaml
mlruns/883317573335820192/8fe5bf4edbb24e3f83149d03d7dd5fb7/metrics/: test_mae  test_r2  test_rmse  train_mae  train_r2  train_rmse  val_mae  val_r2  val_rmse
mlruns/883317573335820192/ac40c7da714347cdb8ff7ba123943478/: meta.yaml
mlruns/models/PM25_AdaBoost/: meta.yaml
mlruns/models/PM25_AdaBoost/version-1/: meta.yaml
mlruns/models/PM25_GBM/: meta.yaml
mlruns/models/PM25_RandomForest/: meta.yaml
src/: __init__.py  automl_analysis.py  data_cleaning.py  data_splitting.py  drift_analysis.py  drift_analysis_evidently.py  drift_analysis_nannyml.py  mlflow_config.py  promote_to_production.py  train_model1.py  train_model2.py  train_model3.py
(+61 files in other folders)
