[project]
name = "mlops-team10"
version = "0.1.0"
description = "MLOps Final Project - PRSA Air Quality PM2.5 Prediction"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "h2o>=3.44.0",
    "mlflow>=2.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "boto3>=1.29.0",
    "psycopg2-binary>=2.9.9",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "sniffio>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
